Fix: Correct appearance of the sign up button after its design was broken caused bybeing wrapped in a Link component & Add variable --shadow-base for consistency

--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -21,6 +21,7 @@
 
 		&:hover {
 			color: var(--primary-color);
+			text-shadow: var(--shadow-base);
 		}
 
 		&:active {
