--- a/components/SignUpButton/SignUpButton.module.css
+++ b/components/SignUpButton/SignUpButton.module.css
@@ -1,13 +1,14 @@
 .button__signUp {
-	margin-block-start: 2rem;
+	margin-block-start: 1.5rem;
 	background-color: var(--secondary-color);
 	color: #fff;
+	font-size: 1rem;
 
 	&:hover {
 		background-color: transparent;
 		outline: 1px solid var(--secondary-color);
 		font-weight: 900;
 		color: var(--primary-color);
-		box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+		box-shadow: var(--shadow-base);
 	}
 }
