--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,12 @@
 	--neutral-color-700: hsl(0, 0%, 25%);
 	--neutral-color-900: hsl(0, 0%, 0%);
 
+	--shadow-base: 0 2px 6px rgba(0, 0, 0, 0.2);
+
 	--ff-regular: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
 		Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-	--border-radius: 0.8em;
+	--border-radius: 0.8rem;
 	--padding-inline-container: 10rem;
 
 	--transition-base: 300ms all cubic-bezier(0.98, -0.71, 0.02, 1.63);
@@ -33,7 +35,7 @@ header {
 	display: flex;
 	width: 100%;
 	height: 7rem;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+	box-shadow: var(--shadow-base);
 }
 
 main {
@@ -44,7 +46,7 @@ main {
 }
 
 button {
-	padding: 0.8em 1em;
+	padding: 0.8rem 1rem;
 	font-size: 1rem;
 	font-family: var(--ff-regular);
 	border-style: none;
